Refactor ticker data structure: update tickers to use a categorized dictionary and adjust fetching logic for options availability

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -8,10 +8,10 @@
     {
      "data": {
       "text/plain": [
-       "['^FTSE', '^STOXX50E', '^N225', '^HSI']"
+       "['SQ']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,23 +20,28 @@
     "import yfinance as yf\n",
     "\n",
     "# List of all tickers provided in different categories\n",
-    "tickers = [\n",
-    "    ]\n",
+    "tickers = {\n",
+    "  \"ETFs\": [\n",
+    "\n",
+    "  ]\n",
+    "  }\n",
     "\n",
     "\n",
     "\n",
     "# Dictionary to store results\n",
     "options_availability = {}\n",
     "\n",
-    "for ticker in tickers:\n",
-    "    try:\n",
-    "        asset = yf.Ticker(ticker)\n",
-    "        options = asset.options  # Fetch options data\n",
-    "        options_availability[ticker] = bool(\n",
-    "            options\n",
-    "        )  # True if options data is available\n",
-    "    except Exception as e:\n",
-    "        options_availability[ticker] = False\n",
+    "\n",
+    "for category in tickers:\n",
+    "    for ticker in tickers[category]:\n",
+    "        try:\n",
+    "            asset = yf.Ticker(ticker[\"ticker\"])\n",
+    "            options = asset.options  # Fetch options data\n",
+    "            options_availability[ticker[\"ticker\"]] = bool(\n",
+    "                options\n",
+    "            )  # True if options data is available\n",
+    "        except Exception as e:\n",
+    "            options_availability[ticker[\"ticker\"]] = False\n",
     "\n",
     "# Filter out tickers that do not have options data available\n",
     "missing_options_tickers = [\n",
@@ -46,16 +51,6 @@
     "missing_options_tickers\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "['HO', 'RB', 'BRN']\n"
    ]
   }
  ],
