--- a/server/utils/final.ipynb
+++ b/server/utils/final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "df309dd7",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import time\n",
     "from datetime import datetime, timezone\n",
-    "from scipy.optimize import minimize, least_squares\n",
+    "from scipy.optimize import minimize, least_squares, differential_evolution\n",
     "from scipy.integrate import quad\n",
     "\n",
     "# --- Heston Pricing Functions ---\n",
@@ -54,8 +54,16 @@
     "        for S, K, T, r in zip(Spots, Strikes, Maturities, Rates)\n",
     "    ])\n",
     "\n",
+    "def mse_loss(Pmodel, Pmkt):\n",
+    "    return np.mean((Pmodel - Pmkt)**2)\n",
     "\n",
-    "def OptFunctionFast(params, Spots, Maturities, Rates, Strikes, MarketP, div, check_bounds=True):\n",
+    "def rmse_loss(Pmodel, Pmkt):\n",
+    "    return np.sqrt(np.mean((Pmodel - Pmkt)**2))\n",
+    "\n",
+    "def relative_rmse_loss(Pmodel, Pmkt):\n",
+    "    return np.sqrt(np.mean(((Pmodel - Pmkt)/ np.mean(Pmkt))**2))\n",
+    "\n",
+    "def OptFunction(params, Spots, Maturities, Rates, Strikes, MarketP, div, check_bounds=True):\n",
     "    kappa, rho, volvol, theta, var0 = params\n",
     "    if check_bounds and not (0.1 <= kappa <= 15 and -0.99 <= rho <= 0 and 0.01 <= volvol <= 2 and 0.001 <= theta <= 0.5 and 0.001 <= var0 <= 0.5):\n",
     "        return 1e10\n",
@@ -67,20 +75,14 @@
     "    S, T, r, K, Pmkt = Spots[mask], Maturities[mask], Rates[mask], Strikes[mask], MarketP[mask]\n",
     "    Pmodel = heston_prices_parallel(params, S, K, T, r, div)\n",
     "    \n",
-    "    # Plain Squared Erro\n",
-    "    err = np.mean((Pmodel - Pmkt)**2)\n",
-    "    \n",
-    "    # Log-Moneyness Weighted Error\n",
-    "    # log_m = np.log(K / S)\n",
-    "    # weights = 1.0 + np.exp(-10 * log_m**2)\n",
-    "    # err = np.mean((Pmodel - Pmkt)**2 * weights)\n",
+    "    err = relative_rmse_loss(Pmodel, Pmkt)\n",
     "    \n",
     "    return err if np.isfinite(err) else 1e10\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5f2260f4",
    "metadata": {},
    "outputs": [],
@@ -116,7 +118,7 @@
     "        '2Y'\n",
     "    )\n",
     "\n",
-    "def get_option_calibration_data(symbol, target_expiration_str, max_main=20, max_side=15):\n",
+    "def get_option_calibration_data(symbol, target_expiration_str, max_main=20, max_side=15,nside=5):\n",
     "    tk = yf.Ticker(symbol)\n",
     "    expirations = pd.to_datetime(tk.options).date\n",
     "    target_exp = pd.to_datetime(target_expiration_str).date()\n",
@@ -124,7 +126,7 @@
     "        raise ValueError(\"Target expiration not available.\")\n",
     "    \n",
     "    idx = np.where(expirations == target_exp)[0][0]\n",
-    "    selected_dates = [expirations[i] for i in range(idx - 10, idx + 10) if 0 <= i < len(expirations)]\n",
+    "    selected_dates = [expirations[i] for i in range(idx - nside-1, idx + nside) if 0 <= i < len(expirations)]\n",
     "\n",
     "    spot = tk.history(period=\"1d\")['Close'].iloc[-1]\n",
     "    rates = fetch_fred_rates()\n",
@@ -163,7 +165,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
+   "id": "04b00ac5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_calibration_results_to_excel(result, data, model_prices, file_path=None):\n",
+    "    \"\"\"\n",
+    "    Save Heston calibration results to Excel including detailed option error analysis.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - result: The calibration result dictionary\n",
+    "    - data: DataFrame with market data\n",
+    "    - model_prices: Array of model prices\n",
+    "    - file_path: Path to save the Excel file (default: 'heston_calibration_results.xlsx')\n",
+    "    \"\"\"\n",
+    "    if file_path is None:\n",
+    "        file_path = f'heston_calibration_{datetime.now().strftime(\"%Y%m%d_%H%M%S\")}.xlsx'\n",
+    "    \n",
+    "    # Create a pandas Excel writer\n",
+    "    writer = pd.ExcelWriter(file_path, engine='xlsxwriter')\n",
+    "    \n",
+    "    # Create a detailed results dataframe\n",
+    "    detailed_df = data.copy()\n",
+    "    detailed_df['modelPrice'] = model_prices\n",
+    "    detailed_df['absoluteError'] = np.abs(detailed_df['modelPrice'] - detailed_df['midPrice'])\n",
+    "    detailed_df['relativeError'] = 100 * detailed_df['absoluteError'] / detailed_df['midPrice']\n",
+    "    detailed_df['squaredError'] = (detailed_df['modelPrice'] - detailed_df['midPrice'])**2\n",
+    "    \n",
+    "    # Save detailed results to Excel\n",
+    "    detailed_df.to_excel(writer, sheet_name='Option_Details', index=False)\n",
+    "    \n",
+    "    # Create summary by maturity\n",
+    "    maturity_summary = detailed_df.groupby('maturityDate').agg({\n",
+    "        'midPrice': ['mean', 'std', 'count'],\n",
+    "        'modelPrice': ['mean', 'std'],\n",
+    "        'absoluteError': ['mean', 'max', 'sum'],\n",
+    "        'relativeError': ['mean', 'max'],\n",
+    "        'squaredError': ['mean', 'sum']\n",
+    "    })\n",
+    "    maturity_summary.columns = ['_'.join(col).strip() for col in maturity_summary.columns.values]\n",
+    "    maturity_summary['rmse'] = np.sqrt(maturity_summary['squaredError_sum'] / maturity_summary['midPrice_count'])\n",
+    "    maturity_summary.to_excel(writer, sheet_name='Maturity_Summary')\n",
+    "    \n",
+    "    # Create summary of calibrated parameters\n",
+    "    params_df = pd.DataFrame([result['parameters']])\n",
+    "    params_df['rmse'] = rmse_loss(model_prices, detailed_df['midPrice'].values)\n",
+    "    params_df['relative_rmse'] = relative_rmse_loss(model_prices, detailed_df['midPrice'].values)\n",
+    "    params_df['optimization_time'] = result.get('optimization_time', result.get('total_time', 0))\n",
+    "    params_df['feller_condition'] = 2 * params_df['kappa'] * params_df['theta'] - params_df['volvol']**2\n",
+    "    params_df.to_excel(writer, sheet_name='Parameters', index=False)\n",
+    "    \n",
+    "    # Save and close\n",
+    "    writer.close()\n",
+    "    print(f\"Calibration results saved to {file_path}\")\n",
+    "    return file_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0c04de4b",
    "metadata": {},
    "outputs": [],
@@ -172,9 +233,9 @@
     "    kappa, rho, volvol, theta, var0 = x\n",
     "    return 2 * kappa * theta - volvol**2\n",
     "\n",
-    "def calibrate_heston(symbol, expiration, div=0.0):\n",
+    "def calibrate_heston(symbol, expiration, div=0.0, save_excel=True, excel_path=None):\n",
     "    t0 = time.time()\n",
-    "    data = get_option_calibration_data(symbol, expiration, max_main=30, max_side=20)\n",
+    "    data = get_option_calibration_data(symbol, expiration, max_main=5, max_side=5,nside=2)\n",
     "    \n",
     "    if data.empty:\n",
     "        return {\"success\": False, \"error\": \"No data found\"}\n",
@@ -194,27 +255,32 @@
     "    cons = {'type': 'ineq', 'fun': Feller}\n",
     "\n",
     "    t1 = time.time()\n",
-    "    result = minimize(\n",
-    "        OptFunctionFast, init, args=(Spots, Maturities, Rates, Strikes, MarketP, div, True),\n",
-    "        method=\"SLSQP\", bounds=bounds, constraints=cons, options={\"maxiter\": 500, \"disp\": False}\n",
-    "    )\n",
-    "    # result = minimize(OptFunctionFast, init, args=(Spots, Maturities, Rates, Strikes, MarketP, div, True), \n",
-    "    #               method='nelder-mead', options={'xtol': 1e-8, 'disp': True})\n",
-    "    elapsed = time.time() - t1\n",
+    "    # result = minimize(\n",
+    "    #     OptFunction, init, args=(Spots, Maturities, Rates, Strikes, MarketP, div, True),\n",
+    "    #     method=\"SLSQP\", bounds=bounds, constraints=cons, options={\"maxiter\": 500, \"disp\": False}\n",
+    "    # )\n",
+    "    result = differential_evolution( OptFunction, bounds, args=(Spots, Maturities, Rates, Strikes, MarketP, div, False), maxiter=200, tol=1e-3)\n",
+    "    elapsed = (time.time() - t1) / 60\n",
     "\n",
     "    xopt = result.x\n",
     "    modelP = heston_prices_parallel(xopt, Spots, Strikes, Maturities, Rates, div)\n",
-    "    mse = np.mean((modelP - MarketP) ** 2)\n",
+    "    rmse = relative_rmse_loss(modelP, MarketP)\n",
     "\n",
     "    print(result)\n",
-    "    print(f\"Calibration time: {elapsed:.2f}s | MSE: {mse:.6f}\")\n",
+    "    print(f\"Calibration time: {elapsed:.2f} min | RMSE: {rmse:.6f}\")\n",
     "    print(f\"Feller condition: {Feller(xopt):.8f} > 0\")\n",
     "    print(f\"Parameters: kappa={xopt[0]:.4f}, rho={xopt[1]:.4f}, volvol={xopt[2]:.4f}, theta={xopt[3]:.4f}, var0={xopt[4]:.4f}\")\n",
     "\n",
+    "    # Save to Excel if requested\n",
+    "    if save_excel:\n",
+    "        if not excel_path:\n",
+    "            excel_path = f\"{symbol}_heston_calibration.xlsx\"\n",
+    "        save_calibration_results_to_excel(result, data, modelP, excel_path)\n",
+    "    \n",
     "    return {\n",
     "        \"result\": result,\n",
     "        \"success\": result.success,\n",
-    "        \"mse\": mse,\n",
+    "        \"mse\": rmse,\n",
     "        \"parameters\": dict(zip([\"kappa\", \"rho\", \"volvol\", \"theta\", \"var0\"], xopt)),\n",
     "        \"optimization_time\": elapsed,\n",
     "        \"total_time\": time.time() - t0\n",
@@ -223,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "id": "c066f843",
    "metadata": {},
    "outputs": [
@@ -231,25 +297,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data loaded in 9.78 seconds | 305 options used\n",
-      " message: Optimization terminated successfully\n",
-      " success: True\n",
-      "  status: 0\n",
-      "     fun: 0.7293214871952328\n",
-      "       x: [ 3.997e+00 -9.324e-01  1.689e-01  5.733e-03  5.266e-02]\n",
-      "     nit: 18\n",
-      "     jac: [ 5.966e-02  1.214e+00 -2.263e-01  2.318e+01  8.225e+00]\n",
-      "    nfev: 138\n",
-      "    njev: 18\n",
-      "Calibration time: 329.60s | MSE: 0.729321\n",
-      "Feller condition: 0.01729772 > 0\n"
+      "Data loaded in 4.57 seconds | 25 options used\n",
+      "             message: Optimization terminated successfully.\n",
+      "             success: True\n",
+      "                 fun: 0.009809161002426884\n",
+      "                   x: [ 9.934e+00 -4.289e-01  1.500e+00  2.866e-02\n",
+      "                        4.862e-02]\n",
+      "                 nit: 77\n",
+      "                nfev: 5958\n",
+      "          population: [[ 9.934e+00 -4.289e-01 ...  2.869e-02  4.857e-02]\n",
+      "                       [ 9.578e+00 -4.319e-01 ...  2.881e-02  4.831e-02]\n",
+      "                       ...\n",
+      "                       [ 9.986e+00 -4.283e-01 ...  2.866e-02  4.862e-02]\n",
+      "                       [ 9.871e+00 -4.223e-01 ...  2.864e-02  4.862e-02]]\n",
+      " population_energies: [ 9.809e-03  9.838e-03 ...  9.821e-03  9.819e-03]\n",
+      "                 jac: [-3.528e-05 -1.467e-04 -9.460e-04  2.737e-04\n",
+      "                        3.472e-04]\n",
+      "Calibration time: 14.49 min | RMSE: 0.009809\n",
+      "Feller condition: -1.68053655 > 0\n",
+      "Parameters: kappa=9.9337, rho=-0.4289, volvol=1.5000, theta=0.0287, var0=0.0486\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'parameters'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[43mcalibrate_heston\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43msymbol\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mSPY\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mexpiration\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m2025-07-31\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdiv\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.0\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43msave_excel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mexcel_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdifferential_evolution_results.xlsx\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[0;32m      7\u001b[0m \u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[16], line 49\u001b[0m, in \u001b[0;36mcalibrate_heston\u001b[1;34m(symbol, expiration, div, save_excel, excel_path)\u001b[0m\n\u001b[0;32m     47\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m excel_path:\n\u001b[0;32m     48\u001b[0m         excel_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msymbol\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_heston_calibration.xlsx\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 49\u001b[0m     \u001b[43msave_calibration_results_to_excel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodelP\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexcel_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m {\n\u001b[0;32m     52\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mresult\u001b[39m\u001b[38;5;124m\"\u001b[39m: result,\n\u001b[0;32m     53\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msuccess\u001b[39m\u001b[38;5;124m\"\u001b[39m: result\u001b[38;5;241m.\u001b[39msuccess,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtotal_time\u001b[39m\u001b[38;5;124m\"\u001b[39m: time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m t0\n\u001b[0;32m     58\u001b[0m }\n",
+      "Cell \u001b[1;32mIn[15], line 40\u001b[0m, in \u001b[0;36msave_calibration_results_to_excel\u001b[1;34m(result, data, model_prices, file_path)\u001b[0m\n\u001b[0;32m     37\u001b[0m maturity_summary\u001b[38;5;241m.\u001b[39mto_excel(writer, sheet_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMaturity_Summary\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;66;03m# Create summary of calibrated parameters\u001b[39;00m\n\u001b[1;32m---> 40\u001b[0m params_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame([\u001b[43mresult\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mparameters\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m])\n\u001b[0;32m     41\u001b[0m params_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrmse\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m rmse_loss(model_prices, detailed_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmidPrice\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues)\n\u001b[0;32m     42\u001b[0m params_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelative_rmse\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m relative_rmse_loss(model_prices, detailed_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmidPrice\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'parameters'"
      ]
     }
    ],
    "source": [
     "res = calibrate_heston(\n",
     "    symbol='SPY',\n",
-    "    expiration='2025-07-31', \n",
+    "    expiration='2025-07-31',\n",
+    "    div=0.0,\n",
+    "    save_excel=True,\n",
+    "    excel_path='differential_evolution_results.xlsx'\n",
     ")"
    ]
   },
