Refactor pricing calculation and API integration
- Updated the PricingPage component to remove unnecessary type conversions for parameters in the pricing request.
- Simplified the construction of the PricingRequest object by directly using parameter values.
- Removed redundant debug logs in the API route for pricing requests.
- Enhanced the rounding precision for Heston model parameters in the calibration utility.
- Added a new code cell in the final Jupyter notebook to display recent SPY option data, improving data handling and visualization.

--- a/server/utils/final.ipynb
+++ b/server/utils/final.ipynb
@@ -165,6 +165,196 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "6a6f117c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['2025-04-01 17:12:32' 560.969970703125 360.0 205.62]\n",
+      " ['2025-04-07 18:37:21' 504.3800048828125 365.0 150.62]\n",
+      " ['2025-04-01 14:27:31' 560.969970703125 370.0 190.58]\n",
+      " ['2025-05-01 19:50:58' 558.469970703125 375.0 189.5]\n",
+      " ['2025-04-09 19:02:05' 548.6199951171875 380.0 159.68]\n",
+      " ['2025-04-10 19:13:04' 524.5800170898438 385.0 149.61]\n",
+      " ['2025-04-01 14:08:57' 560.969970703125 390.0 171.1]\n",
+      " ['2025-04-07 18:38:50' 504.3800048828125 395.0 123.5]\n",
+      " ['2025-05-01 13:36:41' 558.469970703125 400.0 170.3]\n",
+      " ['2025-04-23 14:47:33' 535.4199829101562 405.0 145.45]\n",
+      " ['2025-04-09 19:40:28' 548.6199951171875 410.0 140.01]\n",
+      " ['2025-04-23 14:23:47' 535.4199829101562 415.0 133.75]\n",
+      " ['2025-04-07 13:34:35' 504.3800048828125 420.0 85.1]\n",
+      " ['2025-04-08 16:35:10' 496.4800109863281 425.0 100.52]\n",
+      " ['2025-04-11 18:06:16' 533.9400024414062 430.0 116.3]\n",
+      " ['2025-05-01 19:42:10' 558.469970703125 435.0 131.76]\n",
+      " ['2025-04-28 17:31:54' 550.8499755859375 440.0 112.2]\n",
+      " ['2025-04-04 19:21:51' 505.2799987792969 445.0 81.47]\n",
+      " ['2025-04-25 15:28:48' 550.6400146484375 450.0 104.44]\n",
+      " ['2025-04-25 19:48:02' 550.6400146484375 455.0 102.01]\n",
+      " ['2025-04-23 13:30:37' 535.4199829101562 460.0 90.19]\n",
+      " ['2025-04-23 13:33:07' 535.4199829101562 465.0 86.58]\n",
+      " ['2025-04-25 18:02:28' 550.6400146484375 470.0 87.5]\n",
+      " ['2025-04-28 18:02:26' 550.8499755859375 475.0 82.65]\n",
+      " ['2025-05-02 17:08:41' 567.6400146484375 480.0 94.75]\n",
+      " ['2025-04-30 14:07:18' 554.5399780273438 485.0 70.38]\n",
+      " ['2025-04-28 16:32:05' 550.8499755859375 490.0 68.8]\n",
+      " ['2025-04-30 14:05:18' 554.5399780273438 495.0 61.91]\n",
+      " ['2025-05-01 19:59:57' 558.469970703125 500.0 75.94]\n",
+      " ['2025-04-23 15:56:57' 535.4199829101562 505.0 50.92]\n",
+      " ['2025-04-09 15:37:23' 548.6199951171875 315.0 191.16]\n",
+      " ['2025-04-09 15:47:21' 548.6199951171875 320.0 185.84]\n",
+      " ['2025-04-09 15:54:12' 548.6199951171875 325.0 181.77]\n",
+      " ['2025-04-09 16:27:28' 548.6199951171875 330.0 179.67]\n",
+      " ['2025-04-11 13:51:00' 533.9400024414062 335.0 199.74]\n",
+      " ['2025-04-09 15:30:58' 548.6199951171875 340.0 169.42]\n",
+      " ['2025-04-09 15:15:40' 548.6199951171875 350.0 159.38]\n",
+      " ['2025-04-09 15:38:32' 548.6199951171875 355.0 154.13]\n",
+      " ['2025-04-11 14:54:30' 533.9400024414062 360.0 174.56]\n",
+      " ['2025-04-11 14:09:36' 533.9400024414062 365.0 172.16]\n",
+      " ['2025-04-11 14:08:03' 533.9400024414062 370.0 168.45]\n",
+      " ['2025-04-02 19:16:32' 564.52001953125 375.0 194.33]\n",
+      " ['2025-04-11 13:39:47' 533.9400024414062 380.0 156.71]\n",
+      " ['2025-04-11 18:02:00' 533.9400024414062 385.0 160.54]\n",
+      " ['2025-04-09 15:15:57' 548.6199951171875 390.0 123.97]\n",
+      " ['2025-04-09 16:27:29' 548.6199951171875 395.0 120.98]\n",
+      " ['2025-04-14 18:00:00' 539.1199951171875 400.0 149.13]\n",
+      " ['2025-04-09 15:04:10' 548.6199951171875 405.0 108.0]\n",
+      " ['2025-04-09 15:15:40' 548.6199951171875 410.0 106.49]\n",
+      " ['2025-04-09 17:19:27' 548.6199951171875 415.0 109.65]\n",
+      " ['2025-04-10 18:19:34' 524.5800170898438 420.0 119.07]\n",
+      " ['2025-04-09 16:27:28' 548.6199951171875 425.0 95.52]\n",
+      " ['2025-04-21 19:50:27' 513.8800048828125 430.0 96.33]\n",
+      " ['2025-04-09 16:27:28' 548.6199951171875 435.0 87.4]\n",
+      " ['2025-04-09 14:55:09' 548.6199951171875 440.0 79.8]\n",
+      " ['2025-04-09 14:55:09' 548.6199951171875 445.0 75.97]\n",
+      " ['2025-04-28 18:47:13' 550.8499755859375 450.0 109.3]\n",
+      " ['2025-04-23 13:37:40' 535.4199829101562 455.0 98.18]\n",
+      " ['2025-05-02 15:58:52' 567.6400146484375 460.0 115.6]\n",
+      " ['2025-04-16 19:04:03' 525.6599731445312 465.0 76.55]\n",
+      " ['2025-04-08 16:18:35' 496.4800109863281 360.0 164.24]\n",
+      " ['2025-04-25 18:44:54' 550.6400146484375 380.0 178.37]\n",
+      " ['2025-05-01 17:20:47' 558.469970703125 390.0 179.08]\n",
+      " ['2025-04-08 16:57:45' 496.4800109863281 395.0 128.3]\n",
+      " ['2025-04-14 18:15:48' 539.1199951171875 400.0 150.86]\n",
+      " ['2025-04-08 16:57:45' 496.4800109863281 405.0 119.49]\n",
+      " ['2025-04-09 16:54:06' 548.6199951171875 410.0 110.5]\n",
+      " ['2025-04-09 15:47:25' 548.6199951171875 415.0 104.0]\n",
+      " ['2025-04-07 13:30:00' 504.3800048828125 420.0 91.91]\n",
+      " ['2025-04-21 18:49:06' 513.8800048828125 425.0 100.08]\n",
+      " ['2025-05-01 18:55:09' 558.469970703125 430.0 141.29]\n",
+      " ['2025-04-30 14:57:37' 554.5399780273438 435.0 123.55]\n",
+      " ['2025-04-09 17:27:22' 548.6199951171875 440.0 108.41]\n",
+      " ['2025-04-29 19:28:39' 554.3200073242188 445.0 120.86]\n",
+      " ['2025-05-02 16:01:03' 567.6400146484375 450.0 127.03]\n",
+      " ['2025-04-24 19:48:13' 546.6900024414062 455.0 105.99]\n",
+      " ['2025-04-29 18:04:24' 554.3200073242188 460.0 107.87]\n",
+      " ['2025-05-01 16:21:52' 558.469970703125 465.0 107.84]\n",
+      " ['2025-05-01 16:53:28' 558.469970703125 470.0 102.97]\n",
+      " ['2025-05-01 19:56:21' 558.469970703125 475.0 98.47]\n",
+      " ['2025-05-01 15:52:10' 558.469970703125 480.0 101.35]\n",
+      " ['2025-04-10 13:52:50' 524.5800170898438 485.0 71.71]\n",
+      " ['2025-05-02 16:38:16' 567.6400146484375 490.0 92.92]\n",
+      " ['2025-05-01 15:06:30' 558.469970703125 495.0 84.99]\n",
+      " ['2025-05-01 19:31:04' 558.469970703125 500.0 79.54]\n",
+      " ['2025-05-02 16:00:16' 567.6400146484375 505.0 78.45]\n",
+      " ['2025-05-02 16:38:48' 567.6400146484375 510.0 75.55]\n",
+      " ['2025-05-01 15:53:08' 558.469970703125 515.0 69.91]\n",
+      " ['2025-04-29 19:28:39' 554.3200073242188 516.0 60.84]\n",
+      " ['2025-04-25 19:56:00' 550.6400146484375 517.0 57.19]\n",
+      " ['2025-04-29 18:03:57' 554.3200073242188 345.0 219.29]\n",
+      " ['2025-04-28 14:36:40' 550.8499755859375 350.0 210.72]\n",
+      " ['2025-04-08 13:30:43' 496.4800109863281 355.0 179.53]\n",
+      " ['2025-04-28 14:37:41' 550.8499755859375 360.0 201.7]\n",
+      " ['2025-04-23 13:48:18' 535.4199829101562 365.0 190.97]\n",
+      " ['2025-05-02 14:00:04' 567.6400146484375 380.0 194.25]\n",
+      " ['2025-04-11 19:59:23' 533.9400024414062 385.0 165.71]\n",
+      " ['2025-04-23 14:23:59' 535.4199829101562 390.0 166.5]\n",
+      " ['2025-04-04 13:30:25' 505.2799987792969 395.0 145.12]\n",
+      " ['2025-04-24 14:58:31' 546.6900024414062 400.0 156.5]\n",
+      " ['2025-04-11 16:10:22' 533.9400024414062 405.0 142.5]\n",
+      " ['2025-04-22 16:20:09' 527.25 410.0 135.25]\n",
+      " ['2025-04-17 13:42:50' 526.4099731445312 415.0 131.36]\n",
+      " ['2025-04-24 19:50:00' 546.6900024414062 420.0 143.0]\n",
+      " ['2025-04-28 14:08:33' 550.8499755859375 425.0 141.37]\n",
+      " ['2025-04-17 18:40:49' 526.4099731445312 430.0 120.44]\n",
+      " ['2025-03-25 14:40:12' 575.4600219726562 435.0 156.46]\n",
+      " ['2025-04-23 18:57:48' 535.4199829101562 440.0 116.75]\n",
+      " ['2025-03-25 14:49:47' 575.4600219726562 445.0 147.36]\n",
+      " ['2025-04-28 18:32:11' 550.8499755859375 450.0 117.78]\n",
+      " ['2025-05-01 14:16:55' 558.469970703125 455.0 128.17]\n",
+      " ['2025-05-01 19:04:40' 558.469970703125 460.0 120.72]\n",
+      " ['2025-04-10 16:37:58' 524.5800170898438 465.0 86.45]\n",
+      " ['2025-05-02 16:52:12' 567.6400146484375 470.0 116.93]\n",
+      " ['2025-04-16 13:48:41' 525.6599731445312 475.0 85.75]\n",
+      " ['2025-05-01 19:04:40' 558.469970703125 480.0 103.82]\n",
+      " ['2025-05-01 19:38:47' 558.469970703125 485.0 99.46]\n",
+      " ['2025-05-01 19:38:47' 558.469970703125 490.0 95.43]\n",
+      " ['2025-04-29 14:28:46' 554.3200073242188 495.0 81.77]\n",
+      " ['2025-05-02 14:11:36' 567.6400146484375 500.0 90.4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# 1. Téléchargement des données SPY et options\n",
+    "spy_data = yf.download(\"SPY\", period=\"1y\")\n",
+    "ticker = yf.Ticker(\"SPY\")\n",
+    "\n",
+    "options_data1= ticker.option_chain(ticker.options[13]).calls.head(30)\n",
+    "options_data2= ticker.option_chain(ticker.options[15]).calls.head(30)\n",
+    "options_data3= ticker.option_chain(ticker.options[17]).calls.head(30)\n",
+    "options_data4= ticker.option_chain(ticker.options[19]).calls.head(30)\n",
+    "options_data = pd.concat([options_data1, options_data2, options_data3, options_data4], ignore_index=True)\n",
+    "\n",
+    "\n",
+    "# Garder seulement les options avec un prix valide\n",
+    "valid_options = options_data[~options_data['lastPrice'].isna()]\n",
+    "\n",
+    "# Convertir les dates de lastTradeDate en datetime64 sans timezone\n",
+    "valid_options['lastTradeDate'] = valid_options['lastTradeDate'].dt.tz_convert(None)\n",
+    "\n",
+    "# Extraire les dates de dernier trade des options\n",
+    "dates = valid_options['lastTradeDate']\n",
+    "\n",
+    "# 5. Ajouter une colonne 'expiration' car elle n'est pas dans les données\n",
+    "expiration_dates = []\n",
+    "for opt_date in [ticker.options[12], ticker.options[14], ticker.options[16], ticker.options[18]]:\n",
+    "    expiration_dates += [pd.to_datetime(opt_date)] * 30\n",
+    "expiration_dates = expiration_dates[:len(valid_options)]  # ajuster la longueur\n",
+    "valid_options['expiration'] = expiration_dates\n",
+    "\n",
+    "# 6. Calculer Ti = (expiration - lastTradeDate) en jours\n",
+    "Ti_vector = (valid_options['expiration'] - valid_options['lastTradeDate']).dt.days.astype(float)\n",
+    "\n",
+    "\n",
+    "# Associer chaque date avec le prix de SPY correspondant\n",
+    "spy_prices = spy_data.reindex(dates, method='ffill')['Close'].values  # Prend la valeur la plus proche (fill forward)\n",
+    "\n",
+    "# Extraire les autres données\n",
+    "strikes = valid_options['strike'].values.astype(float)      # Strikes\n",
+    "last_prices = valid_options['lastPrice'].values.astype(float) # Prix des options\n",
+    "\n",
+    "# Création du tableau final bien aligné\n",
+    "combined = np.column_stack((dates.astype(str), spy_prices, strikes, last_prices))\n",
+    "\n",
+    "print(combined) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "id": "04b00ac5",
    "metadata": {},
